--- a/values.yaml
+++ b/values.yaml
@@ -102,8 +102,8 @@ mysql:
   mysqlPassword: ""
   mysqlDatabase: mattermost
 
-  repository: mysql
-  imageTag: '8.0.39'
+  repository: arm64v8/mysql
+  imageTag: '8.0.29'
   testFramework:
     enabled: false
 
