--- a/values.yaml
+++ b/values.yaml
@@ -102,7 +102,7 @@ mysql:
   mysqlPassword: ""
   mysqlDatabase: mattermost
 
-  repository: arm64v8/mysql
+  repository: 'arm64v8/mysql'
   imageTag: '8.0.39'
   testFramework:
     enabled: false
