--- a/values.yaml
+++ b/values.yaml
@@ -89,14 +89,14 @@ externalDB:
   enabled: false
 
   ## postgres or mysql
-  externalDriverType: ""
+  externalDriverType: "postgres"
 
   ## postgres:  "<USERNAME>:<PASSWORD>@<HOST>:5432/<DATABASE_NAME>?sslmode=disable&connect_timeout=10"
   ## mysql:     "<USERNAME>:<PASSWORD>@tcp(<HOST>:3306)/<DATABASE_NAME>?charset=utf8mb4,utf8&readTimeout=30s&writeTimeout=30s"
-  externalConnectionString: ""
+  externalConnectionString: "huytd:@localhost:5432/mattermost?sslmode=disable&connect_timeout=10"
 
 mysql:
-  enabled: true
+  enabled: false
   mysqlRootPassword: ""
   mysqlUser: ""
   mysqlPassword: ""
